Fixed element overlapped issue via css

--- a/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
+++ b/AdobeStockImageAdminUi/view/adminhtml/web/css/source/_module.less
@@ -216,7 +216,8 @@
                         justify-content: center;
                         position: relative;
                         height: 100px;
-                        width: 150px;
+                        max-width: 130px;
+                        width: 100%;
                         overflow: hidden;
                         margin-right: 10px;
                         vertical-align: middle;
@@ -232,7 +233,7 @@
                         display: inline-block;
                         max-height: 100px;
                         text-align: center;
-                        max-width: 140px;
+                        max-width: 130px;
                         vertical-align: middle;
                         width: 100%;
                         cursor: pointer;
